# scoregoals

./: .gitignore  GOAL.md  LICENSE  MORNING.md  README.md  SETUP.md  config.toml  goals.example.md  goals.md  pyproject.toml
.wrangler/cache/: pages.json  wrangler-account.json
dayloop/: __init__.py  __main__.py  cli.py  config.py  focus.py  intentions.py  mockdata.py  models.py  status.py
dayloop/aggregate/: __init__.py  redact.py  segment.py  timeline.py
dayloop/analyze/: __init__.py  base.py  benchmark.py  gemini.py
dayloop/compare/: __init__.py  align.py
dayloop/feedback/: __init__.py  eod.py  morning.py  nudge.py  weekly.py
dayloop/launchd/: com.dayloop.eod.plist  com.dayloop.morning.plist  com.dayloop.nudge.plist  com.dayloop.weekly.plist
dayloop/sources/: __init__.py  github.py  screenpipe.py
dayloop/store/: __init__.py  db.py
docs/: AGENT_API.md  PLAN-experience-and-learning.md  STATUS_SCHEMA.md
menubar/: Package.swift  README.md  build.sh
menubar/Resources/: ScoreGoals.icns
recorder/: ScreenpipeRecorder.icns  build.sh  launcher.swift
scoregoals/: __init__.py  __main__.py  agentapi.py  align.py  annotations.py  audit.py  classify.py  cli.py  config.py  focus.py  intentions.py  labels.py  learn.py  mockdata.py  models.py  status.py
scoregoals/aggregate/: __init__.py  segment.py  timeline.py
scoregoals/analyze/: __init__.py  base.py  benchmark.py  gemini.py  ollama.py
scoregoals/compare/: __init__.py  align.py
scoregoals/feedback/: __init__.py  eod.py  morning.py  notify.py  (+2 more)
scripts/: install.sh  setup.sh
site/: index.html
(+23 files in other folders)
